--- a/index.html
+++ b/index.html
@@ -6,32 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game Recommendations</title>
     <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header id="aniBg">
+    <div class="title">
+      <div class="inner-title-block"></div>
+    <h1>Game Finder</h1>
+    </div>
+    <div class="scroll-indicator">
+      <i class="fas fa-chevron-down down1"></i>
+      <i class="fas fa-chevron-down down2"></i>
+      <i class="fas fa-chevron-down down3"></i>
+    </div>
+  </header>
+  <main>
+    <section>
     <div class="container">
-        <h1>Game Finder</h1>
+        
 
         <form id="js-form">
             <label for="search-term">Enter Game Title or Genre to Get Results</label><br>
-            <input type="text" name="search-term" placeholder="EX: Mario" id="js-search-term" required>
+            <input type="text" name="search-term" placeholder="EX: Mario or RPG" id="js-search-term" required>
             <br>
             <label for="max-results">Number of results to return (Max: 20)</label><br>
             <input type="number" name="max-results" id="js-max-results" value="10">
 
-            <input type="submit" value="Go!">
+            <input class="button" type="submit" value="Search">
+            <a class="small" href="//tastedive.com" target="_blank">Results provided by TasteDive API</a>
         </form>
 
         <p id="js-error-message" class="error-message"></p>
-        <section id="results" class="hidden">
-          <h2>Search results</h2>
-          <ul id="results-list">
-          </ul>
-        </section>
+        <div id="results" class="hidden">
+          <h2>Results</h2>
+          <div id="results-list">
+          </div>
+        </div>
     </div>
-   
+    </section>
+  </main>   
+
+
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.1.3/fetch-jsonp.min.js"></script>
-    <script src="script.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+<script src="vanta.rings.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
