Changed scroll ind animation Changed game card style Animated results

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <i class="fas fa-chevron-down down1"></i>
       <i class="fas fa-chevron-down down2"></i>
       <i class="fas fa-chevron-down down3"></i>
+      <div class="down4">
+        <p>Scroll Down</p>
+      </div>
     </div>
   </header>
   <main>
