--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         
 
         <form id="js-form">
-            <label for="search-term">Enter Game Title or Genre to Get Results</label><br>
+            <label for="js-search-term">Enter Game Title or Genre to Get Results</label><br>
             <input type="text" name="search-term" placeholder="EX: Mario or RPG" id="js-search-term" required>
             <br>
-            <label for="max-results">Number of results to return (Max: 20)</label><br>
+            <label for="js-max-results">Number of results to return (Max: 20)</label><br>
             <input type="number" name="max-results" id="js-max-results" value="10">
 
             <input class="button" type="submit" value="Search">
