--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
             <input class="button" type="submit" value="Search">
             <a class="small" href="//tastedive.com" target="_blank">Results provided by TasteDive API</a>
+            <p id="js-error-message" class="error-message"></p>
         </form>
 
-        <p id="js-error-message" class="error-message"></p>
+        
         <div id="results" class="hidden">
           <h2>Results</h2>
           <div id="results-list">
@@ -60,7 +61,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.1.3/fetch-jsonp.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+ <script src="three.min.js"></script>
 <script src="vanta.rings.min.js"></script>
 <script src="script.js"></script>
 </body>
