--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game Finder</title>
-    <meta name="description" content="Enter in your favorite video game or game genre and get recommendations for new games to play">
+    <meta name="description" content="Enter in your favorite movie or movie genre and get recommendations for new movies to watch">
 
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -19,7 +19,7 @@
   <header id="aniBg">
     <div class="title">
       <div class="inner-title-block"></div>
-    <h1>Game Finder</h1>
+    <h1>Movie Finder</h1>
     </div>
     <div class="scroll-indicator">
       <i class="fas fa-chevron-down down1"></i>
@@ -36,8 +36,8 @@
         
 
         <form id="js-form">
-            <label for="js-search-term">Enter Game Title or Genre to Get Results</label><br>
-            <input type="text" name="search-term" placeholder="EX: Mario or RPG" id="js-search-term" required>
+            <label for="js-search-term">Enter Movie Title or Genre to Get Results</label><br>
+            <input type="text" name="search-term" placeholder="EX: Action or The Matrix" id="js-search-term" required>
             <br>
             <label for="js-max-results">Number of results to return (Max: 20)</label><br>
             <input type="number" name="max-results" id="js-max-results" value="10">
