--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Game Finder</title>
+    <title>Movie Finder</title>
     <meta name="description" content="Enter in your favorite movie or movie genre and get recommendations for new movies to watch">
 
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -37,7 +37,7 @@
 
         <form id="js-form">
             <label for="js-search-term">Enter Movie Title or Genre to Get Results</label><br>
-            <input type="text" name="search-term" placeholder="EX: Action or The Matrix" id="js-search-term" required>
+            <input type="text" name="search-term" placeholder="EX: Matrix or Speed" id="js-search-term" required>
             <br>
             <label for="js-max-results">Number of results to return (Max: 20)</label><br>
             <input type="number" name="max-results" id="js-max-results" value="10">
